--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   background-color: #dedede;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -35,7 +35,8 @@ table {
   max-width: 600px;
 }
 
-td, th {
+td,
+th {
   border: 1px solid #c0c4d6;
   padding: 2px;
 }
@@ -49,6 +50,14 @@ td, th {
   gap: 10px;
 }
 
-h2, h3 {
+h2,
+h3 {
   margin: 0;
+}
+
+.auth-header {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  gap: 10px;
 }
